--- a/changelog/upgrade-guidance/upgrade-checklist.mdx
+++ b/changelog/upgrade-guidance/upgrade-checklist.mdx
@@ -1,127 +1,190 @@
 ---
 title: "Upgrade Checklist"
-description: "A step-by-step checklist guiding users through a safe and efficient upgrade, from reading release notes to testing project compatibility and updating dependencies. This practical tool minimizes risks and reduces upgrade friction."
+description: "A practical, step-by-step checklist for preparing, executing, and validating an upgrade to the latest compatible GoogleTest version. Minimizes risk and provides confidence in the upgrade process."
 ---
 
 # Upgrade Checklist
 
-Navigating a seamless upgrade is essential to leveraging the latest improvements in GoogleTest and GoogleMock without disruption. This Upgrade Checklist guides you through each critical step — from carefully reading release notes to validating compatibility, testing behaviors, and updating dependencies — so you can confidently adopt new versions with minimal friction and risk.
+This Upgrade Checklist provides a practical, step-by-step guide for preparing, executing, and validating an upgrade to the latest compatible version of GoogleTest. Whether you maintain a large codebase or just want a structured process to minimize risk, this checklist ensures confidence and consistency throughout the upgrade journey.
 
 ---
 
-## 1. Review Release Notes Thoroughly
+## 1. Preparation
 
-Begin your upgrade journey by carefully examining the release notes for the new version. Look specifically for:
+### Understand Your Current Environment
+- Identify the currently used GoogleTest and GoogleMock versions.
+- Review your project's dependency and build system configurations related to GoogleTest.
 
-- **Breaking changes:** Note any incompatible API shifts or behavioral modifications.
-- **Deprecations and removals:** Identify any features or macros that are deprecated or removed.
-- **New features:** Understand enhancements that could benefit your tests.
-- **Bug fixes:** Recognize known issues that have been resolved.
+### Review Release Notes and Compatibility
+- Read through the [Release History](https://github.com/google/googletest/releases) to understand new features, bug fixes, and deprecations.
+- Check for any [Breaking Changes and Migrations](../upgrade-guidance/breaking-changes) relevant to your current version.
+- Identify deprecated APIs from the [Deprecations and Removals](../upgrade-guidance/deprecations) page.
 
-Release notes provide invaluable context for what adaptations your codebase and tests may require.
+### Assess Test Code and Mock Usage
+- Audit your test code for use of deprecated or obsolete mocking macros such as old `MOCK_METHODn`.
+- Ensure that your mocks are using the newer, recommended macro style (`MOCK_METHOD` with 3 or 4 parameters).
+- Take note if your code uses unprotected commas in mock methods and prepare to apply fixes if necessary.
 
-## 2. Verify Compatibility with Your Environment
+### Dependency and Build System Setup
+- Verify that the build system supports the required C++17 standards or higher.
+- Update your build configurations (CMake, Bazel, pkg-config) to point to the new GoogleTest version's include and library directories.
+- If using CMake, confirm that you link against the appropriate `gmock_main` or `gtest_main` targets.
 
-Make sure your build environment meets the updated requirements:
+## 2. Execution
 
-- Confirm **compiler version** support; GoogleTest requires at least C++17 compatible compilers.
-- Check dependency compatibility, particularly if you use **GoogleMock** or integrate with complex build tools (e.g., CMake, Bazel).
-- Validate that your **test framework setup** aligns with any new or modified initialization steps.
+### Implement Incremental Upgrades
+- Prefer upgrading to intermediary minor or patch releases if your current version is old.
+- Run your entire test suite after each incremental step to catch issues early.
 
-These verifications prevent unexpected failures on upgrade.
+### Update Mock Definitions and Usage
+- Adapt all mock class definitions to use the new `MOCK_METHOD` macro format:
 
-## 3. Update Mock Classes and Methods
+  ```cpp
+  class MyMock {
+   public:
+    MOCK_METHOD(ReturnType, MethodName, (Args...), (Qualifiers));
+  };
+  ```
 
-GoogleMock upgrades may introduce changes that affect how you define mocks and expectations:
+- Wrap argument or return types with parentheses if they contain unprotected commas:
 
-- Migrate from any deprecated macros (e.g., old `MOCK_METHODn` macros) to the current `MOCK_METHOD` syntax.
-- Review your mock classes to ensure all virtual methods are properly mocked, including handling const, override, noexcept, and calltype qualifiers.
-- Verify usage of **matchers**, **actions**, and **cardinalities** aligns with any updated guidelines or new features.
+  ```cpp
+  MOCK_METHOD((std::pair<bool, int>), GetPair, ());
+  ```
 
-## 4. Adjust Expectations and Actions
+- Use `NiceMock`, `NaggyMock`, and `StrictMock` wrappers for controlling uninteresting call behaviors appropriately.
 
-Work through your test suites to update EXPECT_CALL and ON_CALL usages:
+### Set Mock Expectations Thoughtfully
+- Use `ON_CALL` to define default mock behavior without strict call expectations.
+- Apply `EXPECT_CALL` only when you must verify that a call happens.
+- Avoid overconstraining expectations to reduce test brittleness.
 
-- Pay attention to the chaining order of clauses like `.With()`, `.Times()`, `.InSequence()`, `.After()`, `.WillOnce()`, `.WillRepeatedly()`, and `.RetiresOnSaturation()`.
-- Consider refining expectations for better test resilience by minimizing over-specification.
-- Use **NiceMock**, **NaggyMock**, or **StrictMock** wrappers appropriately to manage warnings and failures related to uninteresting calls.
+### Verify Thread Safety and Synchronization
+- Make sure mock setups happen in one thread, with calls allowed from multiple threads if applicable.
+- Utilize proper synchronization primitives if your actions or matchers interact with shared state.
 
-## 5. Test All Mock Usage Scenarios
+### Run Full Test Suite
+- Execute the full test suite with high verbosity if needed (`--gmock_verbose=info`) to get detailed call traces.
+- Observe warnings about uninteresting or unexpected calls and adjust expectations accordingly.
 
-Run your entire test suite observing:
+## 3. Validation
 
-- Tests where mock methods are expected to be called, including order and frequency.
-- Tests verifying behavior on uninteresting or unexpected calls, confirming warnings or failures occur as intended.
-- Scenarios involving sequences (`InSequence`), partial orders (`After`), and complex interaction patterns.
+### Confirm Expectation Satisfaction
+- Verify that all `EXPECT_CALL` expectations are satisfied during test execution.
+- Utilize `Mock::VerifyAndClearExpectations()` for explicit verification in complex scenarios.
 
-Be aware that upgrading may reveal previously undetected issues or require test updates.
+### Analyze Warnings and Failures
+- Investigate any warnings about uninteresting calls, excessive calls, or unsatisfied prerequisites.
+- Check for problems due to retired expectations or ordering constraints when using `InSequence` or `After` clauses.
 
-## 6. Update Default Actions and Return Value Handling
+### Fix Issues and Rerun
+- Apply fixes to mocks or test scenarios where calls don't match expectations or arguments.
+- Rerun the test suite until clean passes are obtained.
 
-- Where your mocks rely on default return values, ensure these are still appropriate; update or use `DefaultValue<T>` as needed.
-- Confirm use of default actions via `ON_CALL` and verify they reflect the correct behavior post-upgrade.
-- Check proper use of actions such as `Return()`, `ReturnRef()`, `Invoke()`, and chained actions `DoAll()`.
+### Confirm No Memory Leaks
+- Ensure mocks are not leaked by calling `Mock::AllowLeak()` intentionally only when necessary.
+- Use tools like Valgrind or AddressSanitizer to validate.
 
-## 7. Validate Concurrency and Thread Safety
+### Validate Build and Linkage
+- Confirm that tests link and run against the correct version of GoogleTest and GoogleMock libraries.
+- Check that `gmock_main` or `gtest_main` is properly included to avoid missing entry points.
 
-If your tests involve multi-threaded code:
+## 4. Best Practices
 
-- Confirm that mock interactions behave correctly when called from multiple threads.
-- Use provided synchronization constructs or adjust test logic if timing or ordering issues arise due to changes in mock behavior.
+### Use the Newer Mock Macros
+- Transition all old-style `MOCK_METHODn` macros to the templated `MOCK_METHOD` usage.
+- Avoid macro name collisions by using qualified mock names and namespaces.
 
-## 8. Clean Up and Remove Deprecated Features
+### Minimize Expectation Count
+- Prefer `ON_CALL` default actions and only add `EXPECT_CALL` where verification is needed to reduce test fragility.
 
-After confirming your tests run smoothly:
+### Sequence Control with Care
+- Use `InSequence` and `After` only when call ordering matters.
+- For complex call order dependencies, consider partial order graphs with multiple `Sequence` objects.
 
-- Remove any workaround code for deprecated features.
-- Refactor mocks and test helpers to use modern syntax and practices.
-- Take advantage of new APIs or functionality introduced in the upgrade.
+### Debugging Support
+- Use `--gmock_verbose=info` for detailed mock call tracing to speed up troubleshooting.
+- Leverage the built-in matchers and composite matchers to keep argument validation clear and maintainable.
 
-## 9. Verify Leak Detection and Verification Calls
+## 5. Troubleshooting
 
-- Ensure mock objects are deleted properly to trigger verification.
-- If you intentionally leak mocks, use `Mock::AllowLeak()` judiciously.
-- If needed, call `Mock::VerifyAndClearExpectations()` or `Mock::VerifyAndClear()` explicitly for early verification.
+### Unexpected Calls
+- Occur when calls do not match any existing `EXPECT_CALL`.
+- Use diagnostic verbosity and check matchers for correctness.
 
-## 10. Document and Communicate Changes
+### Uninteresting Calls Warning
+- Happens when calls are made with no `EXPECT_CALL` set.
+- Suppress by adding `EXPECT_CALL(...).Times(AnyNumber())` or wrapping mocks with `NiceMock`.
 
-Maintain clear upgrade notes within your team or project documentation:
+### Excessive Calls
+- Result from calls exceeding specified `.Times()` upper bound.
+- Adjust call counts or add `.RetiresOnSaturation()` to expectations.
 
-- Highlight any test changes or new policies on mock usage.
-- Point to new best practices as outlined in the gMock Cookbook and Cheat Sheet.
-- Share relevant FAQs and troubleshooting tips from the official resources.
+### Matching Issues
+- Caused by argument mismatches.
+- Refine argument matchers and consider using `.With()` clause for multi-argument matching.
+
+### Memory Leak Errors
+- Often due to mocks not being destroyed.
+- Use `Mock::AllowLeak()` sparingly and fix ownership issues.
+
+### Build Failures
+- Usually due to missing dependencies or incompatible compiler settings.
+- Confirm C++17 support and correct inclusion of headers and linking of libraries.
+
+## 6. Additional Resources
+
+- [Mocking Reference](../reference/mocking.md): Detailed explanation of mock constructs and matchers.
+- [gMock Cookbook](../gmock_cook_book.md): Recipes for mock usage patterns and advanced mocking techniques.
+- [Breaking Changes and Migrations](../upgrade-guidance/breaking-changes): Essential for understanding what changed in recent releases.
+- [Deprecations and Removals](../upgrade-guidance/deprecations): Help with migrating away from deprecated features.
+- [Troubleshooting & Quick Validation](../../getting-started/first-run-usage/troubleshooting-quick-validation): Common issues and their resolutions.
 
 ---
 
-## Practical Tips & Common Pitfalls
+## Summary
 
-- Avoid mixing setting expectations and exercising mocks; always call `EXPECT_CALL` prior to mock usage.
-- Use `EXPECT_CALL(...).RetiresOnSaturation()` when setting multiple expectations on the same mock method to avoid brittleness.
-- Suppress unwanted warnings about uninteresting calls by wrapping mocks with `NiceMock` or specifying `EXPECT_CALL(...).Times(AnyNumber())`.
-- Be explicit about call order when dependencies exist, leveraging `InSequence` and `After` clauses.
-- Periodically run tests with `--gmock_verbose=info` for enhanced diagnostics during upgrade troubleshooting.
+This Upgrade Checklist empowers you to perform GoogleTest upgrades methodically, reducing risk and ensuring your tests continue to provide valuable verification. Following preparation, execution, and validation phases systematically helps maintain test stability and confidence.
 
-## Troubleshooting Section
-
-If you encounter test failures or unexpected mock behavior:
-
-- Verify the order and matching of your EXPECT_CALL clauses; newer expectations override older ones.
-- Look for mismatches between the actual calls and the expectations' matchers or `.With()` conditions.
-- Check whether an expectation has been retired prematurely or whether unsatisfied prerequisites exist.
-- Investigate default actions set by ON_CALL; unexpected default behaviors may mask missing expectations.
-- Use `--gmock_verbose=info` to trace all mock call matches and expectation invocations to diagnose misalignments.
+For deeper insights into mocks, expectations, and actions involved in upgrade migration, consult the Mocking Reference and gMock Cookbook. Keep an eye on breaking changes and deprecations described in upgrade guidance documentation to align your codebase with the latest standards.
 
 ---
 
-## Additional Resources
+<Callout title="Tip">
+Always run your full test suite after each upgrade step to catch regressions early.
+</Callout>
 
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html): Beginner-friendly tutorial on mock definitions and usage.
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html): Detailed recipes for advanced mocking techniques.
-- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html): Definitive API reference for mocking constructs.
-- [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html): Quick reference to commonly used features.
-- [Legacy gMock FAQ](https://google.github.io/googletest/gmock_faq.html): Answers to common confusion and migration questions.
-- [Upgrade Guidance and Breaking Changes](https://google.github.io/googletest/changelog/upgrade-guidance/breaking-changes-migration.html): Detailed upgrade instructions.
+<Callout title="Note">
+Use `ON_CALL` for default mock behaviors and reserve `EXPECT_CALL` for specified call verifications, to keep tests maintainable and robust.
+</Callout>
 
 ---
 
-With this checklist, your upgrade path to newer versions of GoogleTest and GoogleMock will be structured, efficient, and low-risk. Take advantage of community-tested practices, leverage extensive official guides, and maintain your testing codebase’s health and accuracy throughout the upgrade.
+## Example of Modern Mock Definition
+
+```cpp
+class MockWidget {
+ public:
+  // Mock a method with a move-only argument, const qualifier, and override.
+  MOCK_METHOD(bool, ProcessData, (const std::unique_ptr<Data>& data), (const, override));
+
+  // Mock a method returning a pair with complex types, using parentheses to protect commas.
+  MOCK_METHOD((std::pair<int, std::string>), ComputeResult, (int param1, (std::map<int, double>) param2));
+};
+```
+
+
+## Example Upgrade Steps
+
+1. Update the package or git submodule for GoogleTest to the latest compatible release.
+2. Adjust your build scripts to point to the new include paths and libraries.
+3. Replace any deprecated macros in your mock classes with the latest `MOCK_METHOD` usage.
+4. Fix any mismatched mock method signatures, especially those with unprotected commas.
+5. Run tests with `--gmock_verbose=info` for detailed diagnostics.
+6. Address failures or warnings by refining expectations or default actions.
+7. Validate no memory leaks exist post-upgrade.
+8. Update your CI and build environment with the new version.
+
+---
+
+By adopting this checklist, you will ensure a smooth and reliable transition to the latest GoogleTest version, making the most of its improved capabilities and maintaining high-quality test coverage.
