--- a/overview/architecture-features-integration/feature-overview.mdx
+++ b/overview/architecture-features-integration/feature-overview.mdx
@@ -1,150 +1,175 @@
 ---
 title: "Feature Overview"
-description: "Provide a concise summary of key functionalities: xUnit-style testing, auto test discovery, rich assertions, flexible mocking, parameterized and type-parameterized tests, custom assertions, and versatile test execution controls (e.g., parallelism, ordering). Direct users to where these are explored in more detail."
+description: "Summarizes major features and capabilities: xUnit support, rich assertions, test discovery, user-defined and built-in assertions, death tests, fatal/non-fatal failures, parameterized and type-parameterized tests, and flexible execution controls. Provides quick navigation pointers to explore features in detail."
 ---
 
 # Feature Overview
 
-GoogleTest’s feature-rich framework empowers C++ developers with comprehensive testing and mocking capabilities designed to boost code quality and developer productivity. This page summarizes the key functionalities you’ll leverage daily to write expressive, maintainable, and efficient test suites.
+GoogleTest offers a rich and flexible set of features designed to empower C++ developers in creating robust, maintainable, and efficient tests. This page distills the core capabilities that make GoogleTest a powerful choice for testing, including foundational xUnit support, expressive assertions, comprehensive test discovery, and advanced parameterized and typed testing mechanisms.
 
 ---
 
-## Core Functionalities at a Glance
+## Essential xUnit Support
 
-- **xUnit-Style Testing Framework**: Write clear, structured tests using familiar constructs like `TEST()`, `TEST_F()` (fixtures), and assertions such as `EXPECT_EQ()` and `ASSERT_TRUE()` that provide robust investigation points.
+At its heart, GoogleTest embraces the xUnit architecture, making it familiar and intuitive for developers acquainted with other unit testing frameworks. The framework provides:
 
-- **Automatic Test Discovery**: Seamlessly execute your entire test suite without manual registration. GoogleTest automatically detects all tests under your test binary, enabling effortless and comprehensive test runs.
+- **Test Suites and Tests:** Logical grouping of tests into test suites for organized and manageable test code.
+- **Test Fixtures:** Enables sharing setup and teardown code across multiple tests, reducing duplication and fostering consistency.
+- **Flexible Test Execution:** Runs each test in isolation, ensuring tests remain independent and results reproducible.
 
-- **Rich Assertion Library**: Benefit from an extensive collection of assertions that not only check conditions but also provide detailed failure messages, making debugging fast and intuitive.
-
-- **Flexible Mocking Framework (gMock)**: Create mock classes effortlessly to isolate dependencies, specify function call expectations, behaviors, and argument matching with unparalleled precision.
-
-- **Parameterized and Type-Parameterized Tests**: Write a test logic once and run it against multiple input datasets or types, reducing duplication and expanding coverage efficiently.
-
-- **Custom Assertions and Matchers**: Extend the default set with your own predicates and matchers to capture domain-specific validation scenarios.
-
-- **Versatile Test Execution Controls**:
-  - Parallel test execution to speed up your validation cycles.
-  - Control test execution order with sequencing and ordering constraints.
-  - Selective test filtering and repeated runs for focused diagnostics.
-
-
-## Deep Dive into Features
-
-### xUnit-Style Testing
-
-GoogleTest adopts the popular xUnit pattern, letting tests be organized logically into suites and cases. Test fixtures (`TEST_F`) enable shared setup and teardown operations for related tests, facilitating reusable, clear test logic. Assertions halt test execution on fatal failures, or continue on non-fatal, giving you flexible error-handling tailored to your test objectives.
+### Defining Tests
+You write tests using simple macros like `TEST` and `TEST_F` for basic and fixture-based tests respectively:
 
 ```cpp
-TEST(MathTest, CanAddNumbers) {
-  EXPECT_EQ(2 + 3, 5);
-  ASSERT_TRUE(IsPrime(7));
+TEST(MySuite, TestName) {
+  EXPECT_EQ(1, ComputeSomething());
 }
 
-class MyFixture : public ::testing::Test {
+class MyFixture : public testing::Test {
  protected:
-  void SetUp() override {
-    buffer_.resize(100);
-  }
-  std::vector<int> buffer_;
+  void SetUp() override { Init(); }
+  void TearDown() override { CleanUp(); }
 };
 
-TEST_F(MyFixture, OperatesOnBuffer) {
-  EXPECT_FALSE(buffer_.empty());
+TEST_F(MyFixture, UsesFixture) {
+  ASSERT_TRUE(CheckState());
 }
 ```
 
-### Automatic Test Discovery
+This structure keeps the testing code clean and directly focused on validation logic.
 
-Simply add your tests to the binary, link with GoogleTest, and run. GoogleTest scans and runs all tests automatically, eliminating manual test list maintenance and enabling smoother continuous integration workflows.
+---
 
-### Rich Assertions
+## Rich and Flexible Assertions
 
-Assertions like `EXPECT_EQ`, `EXPECT_NEAR`, `EXPECT_THROW`, and many more let you verify a wide spectrum of conditions. They provide detailed output on failure, including values that failed, call location, and stack traces, accelerating root cause analysis.
+GoogleTest offers an extensive collection of assertion macros that enable validation of diverse conditions:
 
-### GoogleMock Usability Highlights
+- `EXPECT_*` vs. `ASSERT_*`: Expectations generate non-fatal failures allowing tests to continue, while assertions generate fatal failures aborting a test function early.
+- Support for comparisons, strings, floating-point, exceptions, and regular expressions.
+- Ability to stream custom failure messages to aid debugging.
 
-The mocking framework lets you generate mock classes with minimal effort using the `MOCK_METHOD` macro, which captures method signatures to produce fully functional mocks.
-
-By expressing expected function calls, call counts (`Times()`), argument value constraints (via matchers like `_`, `Eq()`, `Gt()`, and composite matchers), and scripted behaviors (`WillOnce()`, `WillRepeatedly()`), you gain tight control over the interaction between your components.
-
-Multiple expectations per method are supported, and you can order calls strictly or partially with `InSequence`, `After()`, and `RetiresOnSaturation()`, enabling precise interaction tests.
-
-### Parameterized and Type-Parameterized Tests
-
-Reuse a single test definition to run across a range of values or types. This feature promotes DRY (Don't Repeat Yourself) principles and broadens test coverage with minimal overhead.
-
-Example of parameterized tests:
+Example of using assertions with detailed messages:
 
 ```cpp
-class PrimeTest : public ::testing::TestWithParam<int> {};
-
-TEST_P(PrimeTest, CheckPrime) {
-  int n = GetParam();
-  EXPECT_TRUE(IsPrime(n));
-}
-
-INSTANTIATE_TEST_SUITE_P(PrimeValues,
-                         PrimeTest,
-                         ::testing::Values(2, 3, 5, 7, 11));
+EXPECT_EQ(result, expected) << "Result does not match expected value.";
+ASSERT_TRUE(IsValid(input)) << "Input validation failed.";
 ```
 
-### Custom Assertions and Matchers
-
-While GoogleTest provides many built-in matchers, you can define your own to express complex domain logic clearly. Use the `MATCHER()` macros or implement matcher classes to achieve this extensibility.
-
-### Test Execution Controls
-
-Control the flow and scaling of your tests effectively:
-
-- Run tests in parallel via test runner options to reduce overall build-test cycles.
-- Enforce call order with sequences or explicit dependencies.
-- Filter tests by name or tag for focused runs.
-- Support for death tests, retry, and repeated test execution to enhance robustness.
-
-
-## Where to Learn More
-
-This page summarizes core feature highlights. For comprehensive guidance and concrete examples, explore the following linked pages:
-
-- [Mocking Reference](/docs/reference/mocking.md): Full manual on mock creation, configuring expectations, and different mock types.
-- [gMock Cookbook](/docs/gmock_cook_book.md): Practical recipes and patterns for effective mocking.
-- [Core Concepts & Terminology](/overview/intro-core-concepts/core-terminology): In-depth explanation of essential GoogleTest terminology.
-- [Parameterized and Type-Parameterized Tests](/guides/advanced-usage-patterns/parameterized-and-type-tests): Step-by-step on creating and using parameterized tests.
-- [Custom Matchers and Actions](/guides/advanced-usage-patterns/custom-matchers-actions): Building tailored testing predicates.
+These assertions assure clear, actionable error diagnostics when tests fail.
 
 ---
 
-## Best Practices & Tips
+## Automated Test Discovery and Execution
 
-- Prefer writing expectations before exercising functionality to catch failures early.
-- Use `.RetiresOnSaturation()` on expectations meant for limited sequential calls to avoid sticky expectation issues.
-- Use `ON_CALL` for default behaviors, and reserve `EXPECT_CALL` for calls where invocation verification is essential.
-- Apply `NiceMock`, `NaggyMock`, or `StrictMock` to change mock behavior on uninteresting calls to match your testing tolerance.
-- Leverage parameterized tests to minimize duplication and maximize coverage.
+GoogleTest manages test registration automatically, removing the need for manual listing. This feature allows:
 
-## Troubleshooting Common Pitfalls
+- Seamless addition of new tests without touching existing test runners.
+- Running all tests simply with `RUN_ALL_TESTS()`.
+- Custom filtering and running subsets of tests via command-line flags.
 
-- Failing to mark methods as `virtual` in base classes leads to mock methods not being called.
-- Beware of over-specifying expectations causing brittle tests.
-- Use test filtering and sequences to control test execution order and reduce flaky tests.
-- For functions returning references, use `ReturnRef()` instead of `Return()`.
+The framework isolates tests, runs them in fresh fixture instances, and reports summary statistics.
 
 ---
 
-Explore the structured guides and references to master each feature, transitioning from simple test authoring to sophisticated mocking and execution control.
+## Parameterized and Typed Tests
+
+GoogleTest supports advanced test patterns that dramatically reduce code duplication and increase coverage:
+
+### Parameterized Tests (Value-Parameterized)
+
+- Define test fixtures that receive parameters allowing you to run the same test logic over multiple input values.
+- Use `TEST_P` and instantiate with `INSTANTIATE_TEST_SUITE_P` combined with parameter generators like `Values()`, `Range()`, `Bool()`, or `Combine()`.
+
+Example:
+
+```cpp
+class MyParamTest : public testing::TestWithParam<int> {};
+
+TEST_P(MyParamTest, IsEven) {
+  EXPECT_EQ(0, GetParam() % 2);
+}
+
+INSTANTIATE_TEST_SUITE_P(EvenNumbers, MyParamTest, testing::Values(2, 4, 6));
+```
+
+### Typed Tests
+
+- Write tests once but run them for multiple types by defining templated fixture classes.
+- Use `TYPED_TEST_SUITE` and `TYPED_TEST` macros to declare and define typed tests.
+
+Example:
+
+```cpp
+template <typename T>
+class StackTest : public testing::Test {
+  // ...
+};
+
+using MyTypes = ::testing::Types<int, double, std::string>;
+TYPED_TEST_SUITE(StackTest, MyTypes);
+
+TYPED_TEST(StackTest, IsEmptyInitially) {
+  EXPECT_TRUE(this->stack_.IsEmpty());
+}
+```
+
+### Type-Parameterized Tests
+
+- Similar to typed tests but allow defining test logic first, then instantiating with different sets of types separately.
 
 ---
 
-## Quick Start Preview
+## Additional Capabilities
 
-**Getting started with Feature Overview:**
-
-1. Familiarize yourself with the [Core Concepts & Terminology](/overview/intro-core-concepts/core-terminology) to understand testing basics.
-2. Dive into [Mocking Reference](/docs/reference/mocking.md) for detailed mock creation.
-3. Explore advanced patterns in [gMock Cookbook](/docs/gmock_cook_book.md).
-4. Try your first parameterized test via [Parameterized Tests Guide](/guides/advanced-usage-patterns/parameterized-and-type-tests).
-
-Start building solid, maintainable test suites with confidence.
+- **Death Tests:** Verify that code terminates as expected in specific error conditions.
+- **User-Defined and Built-In Assertions:** Extend testing with custom predicates and integrate seamlessly with GoogleMock matchers.
+- **Flexible Execution Controls:** Fine-grained test filtering, repetition, sharding, and skipping facilitate optimized test runs.
 
 ---
+
+## Quick Navigation to Feature Details
+
+To dive deeper and master individual capabilities, consult these focused sections:
+
+- [xUnit Test Discovery and Definition](/api-reference/gtest-core-api/test-discovery-and-definition)
+- [Assertions Reference](/api-reference/gtest-core-api/assertions-reference)
+- [Parameterized and Typed Tests](/api-reference/gtest-core-api/parameterized-and-typed-tests)
+- [Death Tests API](/api-reference/gtest-core-api/death-tests-api)
+
+Exploring these will help you harness the full power of GoogleTest.
+
+---
+
+## Practical Tips & Best Practices
+
+- Prefer `EXPECT_*` assertions when you want tests to continue after failures to get comprehensive feedback.
+- Use fixtures (`TEST_F`) when multiple tests share setup to avoid duplication.
+- Apply parameterized tests for data-driven testing to cover many scenarios with concise code.
+- Name test suites thoughtfully without underscores to maintain consistency and avoid unexpected issues.
+- Combine death tests with the naming convention `*DeathTest` for better execution and ordering behavior.
+
+---
+
+## Common Pitfalls to Avoid
+
+- Using `ASSERT_*` in constructors or destructors (fatal assertions should be avoided there).
+- Forgetting to instantiate parameterized tests after defining them leading to silent failures or test misses.
+- Misusing `TEST_F` and `TEST_P` macros interchangeably, resulting in confusing compiler errors.
+- Not calling `InitGoogleTest()` before `RUN_ALL_TESTS()`, which disrupts command-line flag parsing.
+
+Following GoogleTest's guidance on these will make your testing journey smoother.
+
+---
+
+By understanding the broad array of features outlined here, you can effectively write high-quality tests that scale with your project, increase confidence, and speed up debugging.
+
+
+<Info>
+For a practical introduction to writing tests, see the [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md).
+</Info>
+<Info>
+Need complete API details? The [Testing Reference](https://github.com/google/googletest/blob/main/docs/reference/testing.md) fully documents all macros, classes, and functions.
+</Info>
+<Info>
+Extend testing with mocks via the [Mocking Reference](https://github.com/google/googletest/blob/main/docs/reference/mocking.md).
+</Info>
